# metricsreport

./: .gitignore  CHANGELOG.md  pyproject.toml  requirements.txt
exemples/: classification.ipynb  regression.ipynb
exemples/report_metrics/: report_metrics.html
metricsreport/: __init__.py  metricsreport.py
tests/: test_metricsreport.py
