[tool.poetry]
name = "metricsreport"
version = "2024.5.15"
description = "Generating reports on metrics for Machine Learning models"
authors = ["Alex Lekov <11148364-AlexLekov@users.noreply.gitlab.com>"]
repository = 'https://github.com/Alex-Lekov/metricsreport'
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"
scikit-learn= "^1.3.0"
scikit-plot = "^0.3.7"
markdownify = "^0.11.6"
pandas = "^2.2.2"
scipy = "^1.13.0"
pytest = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
